--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Checkout the files
         uses: actions/checkout@v2
-
+      - run: pwd
       - name: Executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@master
         with:
@@ -28,4 +28,5 @@ jobs:
             sudo systemctl enable apache2
             pwd
             ls -la
+            sudo mv html /var/www/html
 
