--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Install SSH
-      run: apt-get install -y openssh-client
+      run: sudo apt-get install -y openssh-client
       
     - name: SSH to EC2 and deploy
       uses: appleboy/ssh-action@master
