--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,18 +12,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-      
-    - name: Install SSH
-      run: sudo apt-get install -y openssh-client
-      
-    - name: SSH to EC2 and deploy
-      uses: appleboy/ssh-action@master
+
+    - name: Copy index.html to EC2
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST_DNS }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          pwd
-          ls -la
-          cp index.html home/ubuntu/var/www/html
-          
+        source: index.html
+        target: /var/www/html/index.html
