--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,4 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Copy index.html to EC2
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST_DNS }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        source: index.html
-        target: /var/www/html/
+      run: scp -i ${{ secrets.EC2_SSH_KEY }} index.html ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }}:/var/www/html/
