--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
         script: |
           pwd
           ls -la
-          ssh -i ${{ secrets.EC2_SSH_KEY }} ${{ secrets.USERNAME }}@$3.96.54.15 "sudo cp /home/runner/work/Git_deploy_Sadna_2/Git_deploy_Sadna_2/index.html /var/www/html"
+          ssh -i ${{ secrets.EC2_SSH_KEY }} ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }} "sudo cp . index.html /var/www/html"
