--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,10 @@ jobs:
       run: sudo apt-get install -y openssh-client
 
     - name: echo ssh key to the EC2
-      run: echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
+        chmod 600 ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
       
     - name: SSH to EC2 and deploy
       uses: appleboy/ssh-action@master
