--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,33 @@
-name: Deploy to EC2
+name: Deploy_to_AWS
+
 env:
   NAME_OF_PRIVATE_KEY: "elad_ca-central-1.pem"
+  EC2_PUBLIC_IP: "3.96.54.15" 
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
-  deploy:
+  deploy_to_aws:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      
-    - name: Install SSH
-      run: sudo apt-get install -y openssh-client
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: echo ssh key to the EC2
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
-        chmod 600 ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
-      
-    - name: SSH to EC2 and deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST_DNS }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
+      - name: mkdir .ssh and copy private key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
+          chmod 600 ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
+          ls -la ~/.ssh
           pwd
-          ls -la
-          ssh -i ${{ secrets.EC2_SSH_KEY }} ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }} "sudo cp . index.html /var/www/html"
+        
+      - name: Install SSH client
+        run: sudo apt install openssh-client
+
+      - name: Install Apache2 on EC2
+        run: |
+          sudo ssh -i ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }} ubuntu@${{ env.EC2_PUBLIC_IP }} 'sudo apt update && sudo apt install -y apache2'
