--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,13 +24,10 @@ jobs:
           chmod 600 ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
           ls -la ~/.ssh
           pwd
-
+        
       - name: Install SSH client
         run: sudo apt install openssh-client
 
-      - name: Add EC2 host to known_hosts
-        run: ssh-keyscan -H ${{ env.EC2_PUBLIC_IP }} >> ~/.ssh/known_hosts
-
       - name: Install Apache2 on EC2
-        run: |
+        script: |
           sudo ssh -i ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }} ubuntu@${{ env.EC2_PUBLIC_IP }} 'sudo apt update && sudo apt install -y apache2'
