--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,28 @@
-name: Deploy_to_AWS
-
-env:
-  NAME_OF_PRIVATE_KEY: "elad_ca-central-1.pem"
-  EC2_PUBLIC_IP: "3.96.54.15" 
+name: Deploy to EC2
 
 on:
   push:
-    branches: [ "main" ]
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
-  deploy_to_aws:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: mkdir .ssh and copy private key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
-          chmod 600 ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
-          ls -la ~/.ssh
-          pwd
-        
-      - name: Install SSH client
-        run: sudo apt install openssh-client
-
-      - name: Install Apache2 on EC2
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
+    - name: Install SSH
+      run: sudo apt-get install -y openssh-client
+      
+    - name: SSH to EC2 and deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST_DNS }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.EC2_SSH_KEY }}
         script: |
+          pwd
+          ls -la
           sudo ssh -i ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }} ubuntu@${{ env.EC2_PUBLIC_IP }} 'sudo apt update && sudo apt install -y apache2'
