--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,4 @@ jobs:
           pwd
           ls -la
           sudo apt update sudo apt
-          install -y apache2
+          sudo apt install -y apache2
