--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,8 @@ jobs:
         pwd
       
     - name: Copy file to EC2
-      run: sudo scp -i ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }} . index.html ubuntu@${{ env.EC2_PUBLIC_IP }}:/home/ubuntu
-  
-      # Replace 'path/to/local/file' with the local file path
-      # Replace '/path/to/remote/location' with the remote directory path on EC2 where you want to copy the file
+      run: scp -i ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }} index.html ubuntu@${{ env.EC2_PUBLIC_IP }}:/home/ubuntu/
+      # Replace 'index.html' with the appropriate file name and '/home/ubuntu/' with the desired directory path on EC2
 
     - name: SSH to EC2 and deploy
       uses: appleboy/ssh-action@master
@@ -42,5 +40,5 @@ jobs:
         script: |
           pwd
           ls -la
-          sudo apt update sudo apt
+          sudo apt update
           sudo apt install -y apache2
