--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Copy file to EC2
       run: |
         ls -la ~/.ssh
-        scp -i ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }} index.html ubuntu@${{ env.EC2_PUBLIC_IP }}:/home/ubuntu/
+        scp -i ~/.ssh/elad_ca-central-1.pem index.html ubuntu@${{ env.EC2_PUBLIC_IP }}:/home/ubuntu/
       # Replace 'index.html' with the appropriate file name and '/home/ubuntu/' with the desired directory path on EC2
 
     - name: SSH to EC2 and deploy
