--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       
     - name: Copy file to EC2
       run: |
-        ls -la ~/.ssh
+        cat ~/.ssh/elad_ca-central-1.pem
         scp -i ~/.ssh/elad_ca-central-1.pem index.html ubuntu@${{ env.EC2_PUBLIC_IP }}:/home/ubuntu/
       # Replace 'index.html' with the appropriate file name and '/home/ubuntu/' with the desired directory path on EC2
 
