--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
+    - name: Checkout code
+      uses: actions/checkout@v2
       
     - name: Install SSH
       run: sudo apt-get install -y openssh-client
