--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Copy file to EC2
       run: |
         ls -la ~/.ssh
-        scp -o StrictHostKeyChecking=no -i ~/.ssh/elad_ca-central-1.pem index.html ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }}:/home/ubuntu
+        sudo scp -o StrictHostKeyChecking=no -i ~/.ssh/elad_ca-central-1.pem index.html ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }}:/var/www/html
 
     - name: SSH to EC2 and deploy
       uses: appleboy/ssh-action@master
