--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,4 @@
 name: Deploy to EC2
-env:
-  NAME_OF_PRIVATE_KEY: "elad_ca-central-1.pem"
 
 on:
   push:
@@ -21,12 +19,25 @@ jobs:
     - name: mkdir .ssh and copy private key
       run: |
         mkdir -p ~/.ssh
-        echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
-        chmod 600 ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }}
+        echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/${{ secrets.NAME_OF_PRIVATE_KEY }}
+        chmod 600 ~/.ssh/${{ secrets.NAME_OF_PRIVATE_KEY }}
       
     - name: Copy file to EC2
       run: |
         ls -la ~/.ssh
-        sudo scp -o StrictHostKeyChecking=no -i ~/.ssh/${{ env.NAME_OF_PRIVATE_KEY }} index.html ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }}:/home/ubuntu
-        cd ~
-        sudo cp ./index.html /var/www/html/
+        scp -o StrictHostKeyChecking=no -i ~/.ssh/${{ secrets.NAME_OF_PRIVATE_KEY }} index.html ${{ secrets.USERNAME }}@${{ secrets.HOST_DNS }}:/home/ubuntu
+
+    - name: SSH to EC2 and deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST_DNS }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        script: |
+          pwd
+          ls -la
+          sudo apt update
+          sudo apt install -y apache2
+          cd home
+          sudo cp index.html /var/www/html/
+          sudo systemctl restart apache2
